# sqchat

./: CMakeLists.txt  ChatArea.qml  ChatHeader.qml  ChatWindow.qml  ChatWindow_backup.qml  LICENSE  LoginWindow.qml  Main.qml  MessageBubble.qml  NotificationManager.qml  NotificationPopup.qml  README.md  RegisterWindow.qml  SettingsDialog.qml  WindowManager.qml  connection_test.cpp  main.cpp
include/: AuthController.h  ChatController.h  ChatHistoryManager.h  Message.h  MessageType.h  NetworkManager.h
qml/: AddFriendDialog.qml  ChatArea.qml  ChatWindow.qml  ContactItem.qml  ContactSidebar.qml  MessageInput.qml
src/: AuthController.cpp  ChatController.cpp  ChatHistoryManager.cpp  Message.cpp  NetworkManager.cpp
